<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/pozadina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:background="@color/purple_200">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@drawable/pozadina"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/purple_500">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/maska"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/purple_200"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/field"
                android:text="@string/marka"
                android:textColor="@color/purple_200"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/purple_200"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/field"
                android:text="@string/kolicina"
                android:textColor="@color/purple_200"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/field"
                android:text="@string/imePrezime"
                android:textColor="@color/purple_200"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/field"
                android:text="@string/grad"
                android:textColor="@color/purple_200"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/field"
                android:text="@string/broj"
                android:textColor="@color/purple_200"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/posalji"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>